--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>HACIENDO PRUEBAS</title>
 </head>
 <body>
+  <section>
+    <div>
+      <h1>Esto es muy facil</h1>
+    </div>
+  </section>
   <script type="module" src="main.js"></script>
 </body>
 </html>
