Añadir router e instalación de firebase

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Etiqueta meta para media queries ya estaba agregada-->
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>HACIENDO PRUEBAS</title>
+  <img class="background" src="./pictures/background.png">
+  <link rel="stylesheet" href="style.css" />
+  <title>PawProtection</title>
 </head>
+
 <body>
-  <section>
-    <div>
-      <h1>Esto es muy facil</h1>
-    </div>
+  
+  <section id="root" class="flex">
+    <!--Acá se cargará el contenido-->
   </section>
+
   <script type="module" src="main.js"></script>
+  <script type="module" src="views/login.js"></script>
 </body>
 </html>
