Añade estilos de CSS

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Etiqueta meta para media queries ya estaba agregada-->
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <img class="background" src="./pictures/background.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Joan&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,700&family=Princess+Sofia&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <title>PawProtection</title>
 </head>
 
 <body>
-  
-  <section id="root" class="flex">
+    <section id="root" class="root-background flex">
     <!--Acá se cargará el contenido-->
-  </section>
+    </section>
 
   <script type="module" src="main.js"></script>
   <script type="module" src="views/login.js"></script>
