--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Joan&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;1,700&family=Princess+Sofia&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="pictures/paw.png">
   <title>PawProtection</title>
 </head>
 
